docker: file config finish 1.0.1